fix layout shift in chrome when opening project lightbox

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -31,3 +31,30 @@ button {
 ol, ul {
 	list-style: none;
 }
+
+::-webkit-scrollbar {
+    width: 12px;
+}
+
+::-webkit-scrollbar-track {
+    background: #e7e7e7;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #ccc;
+    border-radius: 4px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: #bbb;
+}
+
+::-moz-selection {
+    background-color: rgba(0, 0, 0, 0.99);
+    color: #fff;
+}
+
+::selection {
+    background-color: rgba(0, 0, 0, 0.99);
+    color: #fff;
+}
